# cxr-xai-clinical

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  conftest.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  docker-build.yml  lint.yml  test.yml
configs/: eval.yaml  train.yaml  train_kaggle.yaml  xai.yaml
configs/model/: densenet121.yaml  vit_base_patch16_224.yaml
demo/: app.py
docker/: docker-compose.yml
docs/: index.md  mkdocs.yml
notebooks/: kaggle_train.ipynb
scripts/: download_data.sh  evaluate.py  generate_xai.py  run_experiments.sh  test.py  train.py
src/data/: __init__.py  dataset.py  transforms.py
src/evaluation/: __init__.py  deletion_insertion.py  pointing_game.py  road.py  stability_sanity.py  summary.py
src/models/: __init__.py  classifier.py  lr_decay.py
src/training/: __init__.py  checkpoint.py  losses.py  trainer.py  wandb_logger.py
src/utils/: reproducibility.py
src/xai/: __init__.py  attention_rollout.py  gradcam_methods.py  integrated_gradients.py
tests/: test_dataset.py  test_models.py  test_xai.py
