[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "cxr-xai-clinical"
version = "0.1.0"
description = "Chest X-Ray Classification and Quantitative XAI"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
"tests/**" = ["F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=long"
pythonpath = ["."]
